CMAKE_MINIMUM_REQUIRED(VERSION 3.11)

SET(VEDA_TENSORS_VERSION_API	"0")
SET(VEDA_TENSORS_VERSION_STABLE	"0")
SET(VEDA_TENSORS_VERSION_MAJOR	"1")
SET(VEDA_TENSORS_VERSION_MINOR	"0")
SET(VEDA_TENSORS_VERSION_CMAKE	"${VEDA_TENSORS_VERSION_STABLE}.${VEDA_TENSORS_VERSION_MAJOR}.${VEDA_TENSORS_VERSION_MINOR}")

PROJECT(VEDA_TENSORS VERSION "${VEDA_TENSORS_VERSION_CMAKE}" LANGUAGES C CXX)

SET(CMAKE_MODULE_PATH "/usr/local/ve/veda/cmake")
FIND_PACKAGE(VE 1.2.0 REQUIRED)

SET(CMAKE_C_STANDARD 17)
SET(CMAKE_C_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

IF(NOT CMAKE_BUILD_TYPE)
	SET(CMAKE_BUILD_TYPE RELEASE CACHE STRING "" FORCE)
ENDIF()

SET(CMAKE_INSTALL_RPATH "\$ORIGIN")
IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT OR NOT CMAKE_INSTALL_PREFIX)
	SET(CMAKE_INSTALL_PREFIX "${CMAKE_CURRENT_BINARY_DIR}/../install" CACHE PATH "CMAKE install path" FORCE)
ENDIF()

## Build VEDA-Tensors ----------------------------------------------------------
ADD_SUBDIRECTORY(src)

OPTION(WITH_TESTS "Enable tests" OFF)
IF(WITH_TESTS)
	ADD_SUBDIRECTORY(tests)
ENDIF()