INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

SET(SRC)
INCLUDE(${CMAKE_CURRENT_LIST_DIR}/veda/tensors/CMakeLists.txt)
ADD_LIBRARY(veda-tensors ${VEDATensors_BUILD_TYPE} ${SRC})
ILLYRIAN_TARGET_OPTIONS(veda-tensors
	LINK_MAP
	${VEDATensors_DIST_TYPE}
	COMPILE_OPTIONS	-fPIC
	SOVERSION		${VEDATensors_VERSION}
	DESTINATION		${VEDATensors_INSTALL_PATH}/lib64
	PYTHON_RPATH	"$ORIGIN/../../lib64" "$ORIGIN/../../../tungl/lib64"
)
TARGET_LINK_LIBRARIES(veda-tensors PRIVATE
	${VEDA_LIBRARY}
	${Tungl_LIBRARY}
	dl # required for dladdr
)